--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "dependencies": {
     "express": "^4.17.3",
     "joi": "^17.6.0",
+    "bcrypt": "^5.0.1",
     "mongoose": "^6.2.6",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.15"
   }
 }
